# asteroids

./: CMakeLists.txt
src/: CMakeLists.txt  asset.cpp  asset.h  asset_loader.cpp  asset_loader.h  asset_map.cpp  asset_map.h  asteroids.cpp  common.h  game.cpp  game.h  game_font.h  game_map.h  game_texture.cpp  game_texture.h  gfont.cpp  gfont.h  node.h  object_map.cpp  object_map.h  player.cpp  player.h  renderer.cpp  renderer.h  slot_map.cpp  slot_map.h  space_object.cpp  space_object.h  starship.cpp  starship.h  texture.cpp  texture.h
src/collections/: CMakeLists.txt  asset_map.h  object_map.cpp  object_map.h
src/game/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  common.h  game.cpp  game.h  game_asset.cpp  game_asset.h  game_asset_load.cpp  game_asset_load.h  game_asset_manager.cpp  game_asset_manager.h  game_font.cpp  game_font.h  game_menu.cpp  game_menu.h  game_object.cpp  game_object.h  game_player.cpp  game_player.h  game_renderer.cpp  game_renderer.h  game_sound.h  game_state.h  game_state_vars.cpp  game_state_vars.h  game_text.cpp  game_text.h  game_texture.cpp  game_texture.h  player.cpp  player.h  ship.cpp  ship.h  starship.cpp  starship.h
src/graphics/: CMakeLists.txt  game_font.cpp  game_font.h  game_texture.h  renderer.cpp  renderer.h
src/math/: CMakeLists.txt  constants.h  vec2.h
